--- a/package.json
+++ b/package.json
@@ -48,7 +48,9 @@
     "@nebular/security": "7.0.0",
     "@nebular/theme": "7.0.0",
     "@swimlane/ngx-charts": "^14.0.0",
+    "angular-money-mask": "^1.0.0",
     "angular2-chartjs": "0.4.1",
+    "angular2-text-mask": "^9.0.0",
     "bootstrap": "4.3.1",
     "chart.js": "2.7.1",
     "ckeditor": "4.7.3",
@@ -61,6 +63,7 @@
     "leaflet": "1.2.0",
     "nebular-icons": "1.1.0",
     "ng2-ckeditor": "^1.2.9",
+    "ng2-currency-mask": "^11.0.0",
     "ng2-smart-table": "^1.6.0",
     "ngx-echarts": "^4.2.2",
     "node-sass": "^4.12.0",
