--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
   "scripts": {
     "ng": "ng",
     "conventional-changelog": "conventional-changelog",
-    "start": "ng serve",
+    "start": "ng serve --o",
     "build": "ng build",
+    "deploy": "ng deploy --base-href=https://Augusto-Develop.github.io/personwallet-front/",
     "build:prod": "npm run build -- --prod --aot",
     "test": "ng test",
     "test:coverage": "rimraf coverage && npm run test -- --code-coverage",
@@ -93,6 +94,7 @@
     "@types/jasminewd2": "2.0.3",
     "@types/leaflet": "1.2.3",
     "@types/node": "^12.11.1",
+    "angular-cli-ghpages": "^1.0.0-rc.2",
     "codelyzer": "^6.0.0",
     "conventional-changelog-cli": "1.3.4",
     "jasmine-core": "~3.6.0",
