--- a/package.json
+++ b/package.json
@@ -112,6 +112,7 @@
     "stylelint": "7.13.0",
     "ts-node": "3.2.2",
     "tslint": "~6.1.0",
+    "tslint-angular": "^3.0.3",
     "tslint-language-service": "^0.9.9",
     "typescript": "4.0.5"
   }
