--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "conventional-changelog": "conventional-changelog",
     "start": "node --max_old_space_size=2000000 ./node_modules/@angular/cli/bin/ng serve --o",
     "build": "node --max_old_space_size=2000000 ./node_modules/@angular/cli/bin/ng build --prod --aot",
-    "deploy": "ng deploy --base-href=https://Augusto-Develop.github.io/personwallet-front/",
+    "deploy": "node --max_old_space_size=2000000 ./node_modules/@angular/cli/bin/ng deploy --base-href=https://Augusto-Develop.github.io/personwallet-front/",
     "build:prod": "npm run build -- --prod --aot --outputHashing=all",
     "test": "ng test",
     "test:coverage": "rimraf coverage && npm run test -- --code-coverage",
@@ -67,6 +67,7 @@
     "ng2-currency-mask": "^11.0.0",
     "ng2-smart-table": "^1.6.0",
     "ngx-echarts": "^4.2.2",
+    "ngx-mask": "^14.0.2",
     "node-sass": "^4.12.0",
     "normalize.css": "6.0.0",
     "pace-js": "1.0.2",
